[gd_scene load_steps=30 format=2]

[ext_resource path="res://characters/character_template.gd" type="Script" id=1]
[ext_resource path="res://characters/character.gd" type="Script" id=2]
[ext_resource path="res://globals/generic_controller.gd" type="Script" id=3]
[ext_resource path="res://assets/characters/base-char.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 4 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 8.0
height = 16.0

[sub_resource type="Animation" id=3]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 11 ]
}

[sub_resource type="Animation" id=5]
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 11, 9, 0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "return_to_move_state"
} ]
}

[sub_resource type="Animation" id=6]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 9, 10 ]
}

[sub_resource type="Animation" id=7]
length = 0.5
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.25, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "start_mining"
}, {
"args": [ "mine" ],
"method": "_play_sound"
}, {
"args": [  ],
"method": "return_to_move_state"
} ]
}

[sub_resource type="Animation" id=8]
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 0 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ "step" ],
"method": "_play_sound"
}, {
"args": [ "step" ],
"method": "_play_sound"
} ]
}

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "Jump"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "JumpEnd"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "JumpStart"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "Mine"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "Move"

[sub_resource type="AnimationNodeStateMachineTransition" id=15]

[sub_resource type="AnimationNodeStateMachineTransition" id=16]

[sub_resource type="AnimationNodeStateMachineTransition" id=17]

[sub_resource type="AnimationNodeStateMachineTransition" id=18]

[sub_resource type="AnimationNodeStateMachineTransition" id=19]

[sub_resource type="AnimationNodeStateMachineTransition" id=20]

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachineTransition" id=22]

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachine" id=24]
states/Idle/node = SubResource( 9 )
states/Idle/position = Vector2( 186, 79 )
states/Jump/node = SubResource( 10 )
states/Jump/position = Vector2( 622, 226 )
states/JumpEnd/node = SubResource( 11 )
states/JumpEnd/position = Vector2( 380, 306 )
states/JumpStart/node = SubResource( 12 )
states/JumpStart/position = Vector2( 530, 124 )
states/Mine/node = SubResource( 13 )
states/Mine/position = Vector2( 186, 186 )
states/Move/node = SubResource( 14 )
states/Move/position = Vector2( 409, 79 )
transitions = [ "Idle", "Move", SubResource( 15 ), "Move", "Idle", SubResource( 16 ), "Idle", "Mine", SubResource( 17 ), "Mine", "Idle", SubResource( 18 ), "Idle", "JumpStart", SubResource( 19 ), "JumpStart", "Idle", SubResource( 20 ), "JumpEnd", "Idle", SubResource( 21 ), "JumpStart", "Jump", SubResource( 22 ), "Jump", "JumpEnd", SubResource( 23 ) ]
start_node = "Idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=25]

[node name="CharacterTemplate" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )
character_resource = ExtResource( 2 )
controller_resource = ExtResource( 3 )

[node name="FootColider" type="CollisionShape2D" parent="."]

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )
hframes = 12

[node name="MinigArea" type="Area2D" parent="Sprite"]
position = Vector2( -12, 8 )

[node name="Collision" type="CollisionShape2D" parent="Sprite/MinigArea"]
position = Vector2( 9.53674e-07, 0 )
shape = SubResource( 1 )

[node name="ActionArea" type="Area2D" parent="Sprite"]

[node name="Collision" type="CollisionShape2D" parent="Sprite/ActionArea"]
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 3 )
anims/Jump = SubResource( 4 )
anims/JumpEnd = SubResource( 5 )
anims/JumpStart = SubResource( 6 )
anims/Mine = SubResource( 7 )
anims/Move = SubResource( 8 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 24 )
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource( 25 )

[node name="FxPlayer" type="AudioStreamPlayer2D" parent="."]

[node name="BgSndPlayer" type="AudioStreamPlayer2D" parent="."]
volume_db = -80.0

[node name="FootRayCast" type="RayCast2D" parent="."]
position = Vector2( 0, 8 )
enabled = true
cast_to = Vector2( 0, 10 )

[node name="RayCast2D" type="RayCast2D" parent="FootRayCast"]
position = Vector2( 0, 8 )
cast_to = Vector2( 0, 15 )

[node name="debugInv" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}
